refactoring, bug fixes and improvements.